--- a/journal/src/App.css
+++ b/journal/src/App.css
@@ -1,7 +1,24 @@
+@font-face {
+  font-family: 'Notes';
+  src: url(./assets/fonts/A\ Note.ttf);
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Antipasto';
+  src: url(./assets/fonts/AntipastoPro_trial.ttf);
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  overflow: hidden;
 }
 
 .App {
@@ -20,6 +37,8 @@
   background-color: #f8f9fa;
   display: flex;
   flex-direction: column;
+  font-family: 'Antipasto';
+  font-size: 24px;
 }
 
 .left-panel h2 {
@@ -34,6 +53,10 @@
   border-radius: 5px;
   border: 1px solid #ccc;
   resize: none;
+  font-family: 'Notes';
+  font-size: 25px;
+  font-weight: bold;
+  filter: drop-shadow(7px 7px 10px #000);
 }
 
 /* Right Panel (Emotion Tracker) */
@@ -46,13 +69,26 @@
   justify-content: space-between;
 }
 
+.right-panel h3 {
+  font-family: 'Antipasto';
+  font-size: 35px;
+}
+
+.right-panel span, p {
+  font-family: 'Antipasto';
+  font-size: 20px;
+}
+
 /* Emotion Track Bar Section */
 .emotion-track {
   margin-bottom: 20px;
+  font-size: 20px;
+  filter: drop-shadow(5px 5px 20px #000);
 }
 
 .emotion-track h3 {
   margin-bottom: 10px;
+  filter: drop-shadow(0px 0px 0px #000)
 }
 
 .track-bars {
@@ -72,6 +108,14 @@
 
 .range-slider {
   width: 100%;
+}
+
+.recharts-legend-item {
+  filter: drop-shadow(1px 1px 2px #000)
+}
+
+.recharts-legend-item-text {
+  font-family: 'Antipasto';
 }
 
 /* Emotion Graph Section */
@@ -142,6 +186,10 @@
   border-radius: 5px;
   font-size: 16px;
   cursor: pointer;
+  z-index: 1;
+  font-family: 'Antipasto';
+  font-size: 20px;
+  font-weight: bold;
 }
 
 .submit-btn {
